--- a/css/styles.css
+++ b/css/styles.css
@@ -782,7 +782,6 @@ body {
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .link-image:hover .text-overlay,
@@ -851,9 +850,9 @@ body {
 
 .btn-modal {
   position: absolute;
-  top: 0;
-  right: 0;
-  margin: 8px 8px 543px 490px;
+  top: 8px;
+  right: 8px;
+  /* margin: 8px 8px 543px 490px; */
   display: flex;
   width: 30px;
   height: 30px;
@@ -871,10 +870,7 @@ body {
 }
 
 .modal-form {
-  position: absolute;
-  top: 0;
   width: 100%;
-  /* height: 100%; */
   padding: 40px;
 }
 
