--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,7 @@ body {
   line-height: 1.88;
   text-align: center;
   letter-spacing: 0.06em;
+  border: none;
   border-radius: 4px;
 }
 
@@ -687,6 +688,7 @@ body {
   letter-spacing: 0.06em;
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
   border-radius: 4px;
   color: var(--white-text);
 }
@@ -852,10 +854,9 @@ body {
   position: absolute;
   top: 8px;
   right: 8px;
-  /* margin: 8px 8px 543px 490px; */
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   border-color: rgba(0, 0, 0, 0.1);
 
@@ -867,6 +868,11 @@ body {
 
 .icon-modal {
   color: #000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-modal:hover {
+  fill: var(--accent-color);
 }
 
 .modal-form {
@@ -897,6 +903,8 @@ body {
 }
 
 .modal-label {
+  display: block;
+  margin-bottom: 4px;
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
@@ -904,8 +912,8 @@ body {
 }
 
 .modal-input {
-  padding-top: 11px;
-  padding-bottom: 11px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 35px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
